--- a/Project1/tolkien/Cargo.toml
+++ b/Project1/tolkien/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 crossterm = "0.28.1"
+egui_json_tree = "0.11.0"
 inquire = "0.7.5"
-serde = "1.0.219"
+serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
+petgraph = "0.7.1"
