--- a/Project1/tolkien/Cargo.toml
+++ b/Project1/tolkien/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-inquire = "0.7.5"
+crossterm = "0.28.1"
+grammarconversion = "0.2.0"
+pyo3 = "0.24.0"
+ratatui = "0.29.0"
+rayon = "1.10.0"
 serde = {version = "1.0.219", features = ["derive"]}
 serde_json = "1.0.140"
