--- a/Project2/esercitazione 2/Cargo.toml
+++ b/Project2/esercitazione 2/Cargo.toml
@@ -9,4 +9,5 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 rand = "0.8"
 inquire = "0.7.5"
+csv = "1.3.1"
 
